WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97126
[BlackBerry] Fix vertical positioning problem for 'X' in search field
https://bugs.webkit.org/show_bug.cgi?id=97126
Summary
[BlackBerry] Fix vertical positioning problem for 'X' in search field
Rob Buis
Reported
2012-09-19 12:50:02 PDT
I noticed our port has the same problem as described here
https://bugs.webkit.org/show_bug.cgi?id=30245
.
Attachments
Patch
(4.74 KB, patch)
2012-09-19 13:08 PDT
,
Rob Buis
tonikitoo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2012-09-19 13:08:01 PDT
Created
attachment 164766
[details]
Patch
Rob Buis
Comment 2
2012-09-19 13:53:01 PDT
Committed
r129041
: <
http://trac.webkit.org/changeset/129041
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug