[BlackBerry] Fix vertical positioning problem for 'X' in search field https://bugs.webkit.org/show_bug.cgi?id=97126

Reviewed by Antonio Gomes.

We have the same problem as described in bug 30245, so integrate that code.

* platform/blackberry/RenderThemeBlackBerry.cpp:
(WebCore::RenderThemeBlackBerry::convertToPaintingRect):
(WebCore):
(WebCore::RenderThemeBlackBerry::paintSearchFieldCancelButton):

Canonical link: https://commits.webkit.org/115093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129041 268f45cc-cd09-0410-ab3c-d52691b4dbfc